# aoc-2024

./: .gitignore  .gitmodules  LICENSE  README.md
cpp/: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  justfile  pixi.toml
cpp/day01/: main.cpp  main2.cpp
cpp/day02/: CMakeLists.txt  main.cpp  main2.cpp
cpp/day03/: CMakeLists.txt  main.cpp  main2.cpp
cpp/day04/: CMakeLists.txt  main.cpp  main2.cpp
cpp/day05/: CMakeLists.txt  main.cpp  main2.cpp
cpp/day06/: CMakeLists.txt  main.cpp  main2.cpp
cpp/day07/: CMakeLists.txt  main.cpp  main2.cpp
cpp/day08/: CMakeLists.txt  main.cpp  main2.cpp
cpp/day09/: CMakeLists.txt  main.cpp  main2.cpp
cpp/day10/: CMakeLists.txt  main.cpp  main2.cpp
cpp/day11/: CMakeLists.txt  main.cpp  main2.cpp
cpp/day12/: CMakeLists.txt  main.cpp  main2.cpp
cpp/day13/: CMakeLists.txt  main.cpp  main2.cpp  main_extra.cpp
cpp/day14/: CMakeLists.txt  main.cpp  main2.cpp
cpp/day15/: CMakeLists.txt  main.cpp  main2.cpp
cpp/day16/: CMakeLists.txt  main.cpp  main2.cpp
cpp/day20/: CMakeLists.txt  main.cpp  main2.cpp
cpp/day21/: CMakeLists.txt  main.cpp  main2.cpp
cpp/day22/: CMakeLists.txt  main.cpp  main2.cpp
cpp/day23/: CMakeLists.txt  main.cpp  main2_efficient.cpp
cpp/day24/: CMakeLists.txt  main.cpp  main2.cpp  pt2.py
cpp/day25/: CMakeLists.txt  main.cpp
go/: day1.go  day2.go  day3.go  day4.go  day5.go  day6.go  go.mod  justfile  main.go  utils.go
go/day01/: day1.go
go/day02/: day2.go
go/day03/: day3.go
go/day04/: day4.go
go/day05/: day5.go
go/day06/: day6.go
go/day08/: day8.go
go/day09/: day9.go
go/day10/: day10.go
go/day11/: day11.go
go/day12/: day12.go
go/day13/: day13.go
go/day14/: day14.go
go/day15/: day15.go
go/day16/: day16.go
go/day17/: day17.go
go/day18/: day18.go
go/day19/: day19.go
go/day20/: day20.go
go/day21/: day21.go
go/day7/: day7.go
go/utils/: utils.go
python/: day1.py  day10.py  day11.py  day12.py  day13.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  pixi.toml  pyproject.toml
