cmake_minimum_required(VERSION 3.31)

project(AOC2024
    VERSION 1.0
    LANGUAGES CXX
)

add_library(compiler_flags INTERFACE)
target_compile_features(compiler_flags INTERFACE cxx_std_23)

# 3rd party dependencies
find_package(Eigen3 3.4.90 REQUIRED NO_MODULE)
find_package(Catch2 3.7.1 REQUIRED NO_MODULE)

include(CTest)
include(Catch)

add_subdirectory(utils)

add_subdirectory(day01)
add_subdirectory(day02)
add_subdirectory(day03)
add_subdirectory(day04)
add_subdirectory(day05)
add_subdirectory(day06)
add_subdirectory(day07)
add_subdirectory(day08)
add_subdirectory(day09)
add_subdirectory(day10)
add_subdirectory(day11)
add_subdirectory(day12)
add_subdirectory(day13)
add_subdirectory(day14)
add_subdirectory(day15)
add_subdirectory(day16)
add_subdirectory(day20)
add_subdirectory(day21)
